# sot-core

./: CMakeLists.txt  package.xml
include/: CMakeLists.txt
include/sot/core/: derivator.hh
src/: CMakeLists.txt
src/feature/: feature-point6d.cpp  feature-posture.cpp
src/tools/: device.cpp
unitTesting/: CMakeLists.txt
